# nc-dev-log

./: .gitignore  pyproject.toml  tasks.py
docs/notes/: ldap.md  letsencrypt.md  privileged-ports.md  ssh.md  technical-user.md  tls.md
invokees/: bucketfs.py  code.py  environment.py  errno.py  files.py  terminal.py  tls.py
tasks/: __init__.py  bucketfs.py  cmd.py  code.py  environment.py  errno.py  tls.py
